--- a/jsTestDriver.conf
+++ b/jsTestDriver.conf
@@ -3,5 +3,6 @@ load:
   - test/jasmine/jasmine.js
   - test/jasmine/jasmineAdapter.js
   - test/jasmine/jasmine-html.js
+  - src/route.js
 test:
    -  test/route.test.js
